# BlackjackBot

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs  server.rs
src/components/: actionconsole.rs  cardlist.rs  gameinitializer.rs  mod.rs
src/server/: mod.rs  types.rs
src/styles/: cardlist.css
