[package]
name = "blackjack-bot"
version = "0.1.0"
authors = ["ethqnol <112029223+ethqnol@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
chrono = "0.4.37"
dioxus-fullstack = "0.5.2"
struct_iterable = "0.1.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
